[package]
name = "nimb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.3.22", features = ["derive"] }
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
dirs = "5.0.1"
reqwest = "0.11.18"
ron = "0.8.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
